--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -18,6 +18,7 @@
   Миксины
 */
 @import "./mixins/breadcrumbs";
+@import "./mixins/breadcrumbs-footer";
 @import "./mixins/button-transparent";
 @import "./mixins/resort-card";
 @import "./mixins/sanatorium-card";
