--- a/src/views/components/footer/footer-nav.pug
+++ b/src/views/components/footer/footer-nav.pug
@@ -8,12 +8,10 @@ nav.footer-nav
         .footer-nav__block
           a.footer-nav__tel(href="tel:8-800-333-41-99") 8-800-333-41-99
           .footer-nav__comment Быстрое бронирование 24/7
-
         .footer-nav__block
         .footer-nav__block.footer-nav__block--none
           button.footer-nav__button(type="button") Личный кабинет
           .footer-nav__comment Узнать статус заявки
-
 
       .footer-nav__blocks.footer-nav__blocks--border
         .footer-nav__block.footer-nav__dropdown
@@ -28,7 +26,6 @@ nav.footer-nav
             a.footer-nav__link(href="#") Экскурсии
             a.footer-nav__link(href="#") Базы отдыха
             a.footer-nav__link(href="#") Детские лагеря
-
         .footer-nav__block.footer-nav__dropdown
           .footer-nav__header
             h2.footer-nav__title Туристу
@@ -39,8 +36,8 @@ nav.footer-nav
             a.footer-nav__link(href="#") МосГорТур
             a.footer-nav__link(href="#") О компании
             a.footer-nav__link(href="#") Отзывы о нас
+            a.footer-nav__link(href="#") Контакты
             a.footer-nav__link(href="#") Акции
-
         .footer-nav__block.footer-nav__dropdown
           .footer-nav__header
             h2.footer-nav__title Сотрудничество
@@ -51,7 +48,6 @@ nav.footer-nav
             a.footer-nav__link(href="#") Партнерская программа для сайтов
             a.footer-nav__link(href="#") Объектам размещения
             a.footer-nav__link(href="#") Туроператорам
-
         .footer-nav__block.footer-nav__dropdown
           .footer-nav__header
             h2.footer-nav__title Офис в Москве
