--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -86,6 +86,7 @@ html(lang="ru")
     .render
 
     include ../mixins/breadcrumbs
+    include ../mixins/breadcrumbs-footer
     include ../mixins/resort-card
     include ../mixins/sanatorium-card
     include ../mixins/button-transparent
