--- a/src/assets/styles/mixins/breadcrumbs.scss
+++ b/src/assets/styles/mixins/breadcrumbs.scss
@@ -47,10 +47,6 @@
     display: inline-flex;
     @include max-screen(tablet) {
       display: none;
-      // gap: 4px;
-      // background-color: rgba($color: $blue-700, $alpha: 0.07);
-      // padding: 7px 10px;
-      // border-radius: 6px;
     }
     @include min-screen(tablet-2x) {
       gap: 10px;
@@ -58,20 +54,11 @@
 
     li {
       display: inline;
-      // &:first-child {
-      //   @include max-screen(tablet) {
-      //     display: none;
-      //   }
-      // }
     }
 
     li,
     a, 
     p {
-      // @include max-screen(tablet) {
-      //   font-size: 14px;
-      //   line-height: 16px;
-      // }
       @include min-screen(tablet-2x) {
         font-size: 16px;
         line-height: 18px;
@@ -84,23 +71,13 @@
       display: inline-block;
       stroke: $gray-400;
       stroke-opacity: 0.5;
-      // @include max-screen(tablet) {
-      //   transform: rotate(180deg);
-      //   stroke: $blue-500;
-      // }
-
-      // &:last-child {
-      //   @include max-screen(tablet) {
-      //     display: none;
-      //   }
-      // }
     }
 
     a {
       &:active {
         color: $orange-500;
       }
-      @include min-screen(tablet-2x) {
+      @include min-screen(laptop) {
         transition: color $transition-default;
         &:hover {
           color: $orange-500;
