--- a/src/assets/styles/components/reviews/reviews-popup.scss
+++ b/src/assets/styles/components/reviews/reviews-popup.scss
@@ -92,7 +92,10 @@
     top: 0;
     @include min-screen(tablet-2x) {
       right: 0;
-    } 
+    }
+    svg {
+      stroke: $gray-400;
+    }
   }
 
   &__main {
