--- a/src/assets/styles/components/attractions/attractions-excursion.scss
+++ b/src/assets/styles/components/attractions/attractions-excursion.scss
@@ -11,6 +11,9 @@
       padding: 0;
       margin: 50px 0;
     }
+    .wrapper, .wide-wrapper, .swiper {
+      padding: 0;
+    }
   }
 
   &__header {
