--- a/src/assets/styles/components/footer/footer-confirmation.scss
+++ b/src/assets/styles/components/footer/footer-confirmation.scss
@@ -182,5 +182,11 @@
         padding: 30px 24px 40px 24px;
       }
     }
+
+    &__close {
+      svg {
+        stroke: $gray-400;
+      }
+    }
   }
 }
