--- a/src/assets/styles/components/reviews/reviews-create-popup.scss
+++ b/src/assets/styles/components/reviews/reviews-create-popup.scss
@@ -15,6 +15,12 @@
     visibility: visible;
   }
 
+  &__close {
+    svg {
+      stroke: $gray-400;
+    }
+  }
+
   &__wrapper {
     position: absolute;
     background-color: $white;
