--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -33,24 +33,31 @@ $blue-300: #0093DD;
 $blue-400: #4E78DA;
 $blue-500: #1F56D8;
 $blue-600: #3663CB;
+$blue-650: #3775BC;
 $blue-700: #2768C9;
 $blue-800: #386AE0;
 $blue-900: #14448B;
 $blue-950: #154482;
 
 $gray-400: #A1ABB9;
+$gray-700: #FFFFFFA6;
 $gray-800: #64749A;
 $gray-900: #4B6AA6;
 
+$green-200: #14C405;
 $green-300: #0BAB8B;
 $green-400: #23C1A1;
 $green-500: #21A038;
+$green-600: #009A49;
 
 $orange-300: #EF8807;
 $orange-400: #FDAE38;
 $orange-500: #FE9410;
+$orange-600: #DA8418;
 
 $red-400: #FC4210;
 $red-500: #FC4310;
+$red-600: #FC3F1D;
+$red-900: #CD0505;
 
 $yellow-400: #FFCC00;
