--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -100,6 +100,7 @@ html(lang="ru")
     include ../mixins/attractions-sanatorium
     include ../mixins/attractions-excursion
     include ../mixins/main-about
+    include ../mixins/search-card
 
     include ../components/header
 
