update side bar

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -110,3 +110,4 @@
 @import "./components/search/search-keywords";
 @import "./components/search/search-sorting";
 @import "./components/search/search-cards";
+@import "./components/search/search-map";
