--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -40,6 +40,7 @@ $blue-900: #14448B;
 $blue-950: #154482;
 
 $gray-400: #A1ABB9;
+$gray-500: #E8E8E8;
 $gray-700: #FFFFFFA6;
 $gray-800: #64749A;
 $gray-900: #4B6AA6;
