--- a/src/views/components/search/search-cards.pug
+++ b/src/views/components/search/search-cards.pug
@@ -20,7 +20,7 @@
         }
       ],
       location: 'Санкт-Петербург, 6-я Васильевского острова линия, 45Б',
-      review: '<span>8,7</span> • 156 отзывов',
+      review: '<span>8,7</span> <br> • 156 отзывов',
       statusOrange: 'Быстрое бронирование',
       statusBlue: '',
       statusRed: '',
