--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -17,7 +17,9 @@ block content
       .wrapper
         include ../components/search/search-link
         .search__wrapper
-          include ../components/search/search-sidebar
+          .search__sidebar
+            include ../components/search/search-map
+            include ../components/search/search-sidebar
           .search__blocks
             include ../components/search/search-keywords
             include ../components/search/search-sorting
