update search page

--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -29,6 +29,7 @@ $cyan-400: #10A2EC;
 
 $blue-100: #F1F4F9;
 $blue-150: #E3EBF6;
+$blue-200: #019EE0;
 $blue-300: #0093DD;
 $blue-400: #4E78DA;
 $blue-500: #1F56D8;
@@ -36,8 +37,11 @@ $blue-600: #3663CB;
 $blue-650: #3775BC;
 $blue-700: #2768C9;
 $blue-800: #386AE0;
+$blue-850: #0252A2;
 $blue-900: #14448B;
 $blue-950: #154482;
+
+$brown-700: #745C2F;
 
 $gray-400: #A1ABB9;
 $gray-500: #E8E8E8;
@@ -50,6 +54,7 @@ $green-300: #0BAB8B;
 $green-400: #23C1A1;
 $green-500: #21A038;
 $green-600: #009A49;
+$green-700: #029A55;
 
 $orange-300: #EF8807;
 $orange-400: #FDAE38;
@@ -59,6 +64,7 @@ $orange-600: #DA8418;
 $red-400: #FC4210;
 $red-500: #FC4310;
 $red-600: #FC3F1D;
+$red-700: #EF1E25;
 $red-900: #CD0505;
 
 $yellow-400: #FFCC00;
