--- a/src/assets/styles/components/search/search-map.scss
+++ b/src/assets/styles/components/search/search-map.scss
@@ -44,5 +44,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background-color $transition-default, color $transition-default;
+    &:hover {
+      background-color: $white;
+      color: $orange-500;
+    }
   }
 }
