--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -26,5 +26,6 @@ block content
             include ../components/search/search-cards
             include ../components/attractions/attractions-information
             include ../components/search/search-cards
+            include ../components/pagination-huge
 
 
