--- a/src/assets/styles/components/search/search-keywords.scss
+++ b/src/assets/styles/components/search/search-keywords.scss
@@ -1,9 +1,9 @@
 .search-keywords {
-  @include max-screen(tablet) {
+  @include max-screen(tablet-2x) {
     display: none;
   }
-  @include min-screen(tablet-2x) {
-
+  @include min-screen(laptop) {
+    display: block;
   }
   &__title {
     font-family: 'Tilda Sans';
