--- a/src/assets/styles/components/search/search-link.scss
+++ b/src/assets/styles/components/search/search-link.scss
@@ -1,10 +1,11 @@
 .search-link {
-  @include max-screen(tablet) {
+  @include max-screen(tablet-2x) {
     display: none;
   }
-  @include min-screen(tablet-2x) {
-
+  @include min-screen(laptop) {
+    display: block;
   }
+  
   &__items {
     display: flex;
     gap: 10px;
