update search page

--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -61,6 +61,7 @@ $orange-400: #FDAE38;
 $orange-500: #FE9410;
 $orange-600: #DA8418;
 
+$red-300: #FF0000;
 $red-400: #FC4210;
 $red-500: #FC4310;
 $red-600: #FC3F1D;
