--- a/src/assets/styles/mixins/search-card.scss
+++ b/src/assets/styles/mixins/search-card.scss
@@ -228,6 +228,11 @@
         color: $blue-650;
       }
     }
+    &--red {
+      span {
+        color: $red-300;
+      }
+    }
   }
 
   &__review {
@@ -417,15 +422,20 @@
     }
     @include min-screen(tablet-2x) {
       max-height: 220px;
+      height: 220px;
       border-radius: 8px 0 0 8px;
+    }
+    @include mm-screen(tablet-2x) {
       width: 300px;
       min-width: 300px;
     }
     @include mm-screen(laptop) {
-      
+      width: 240px;
+      min-width: 240px;
     }
     @include min-screen(desktop) {
-      
+      width: 300px;
+      min-width: 300px;
     }
     img {
       height: 100%;
