--- a/src/views/components/search/search-keywords.pug
+++ b/src/views/components/search/search-keywords.pug
@@ -1,4 +1,4 @@
-section.search-keywords
+.search-keywords
   h3.search-keywords__title Выбранные фильтры
   .search-keywords__buttons
     button.search-keywords__button(type="button")
