--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -13,7 +13,9 @@ block manifestBrowserconfigFiles
 
 block content
   main
+    include ../components/search/search-hero
     .search
+      include ../components/search/search-filter
       .wrapper
         include ../components/search/search-link
         .search__wrapper
