--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -33,6 +33,7 @@
 /*
   Компоненты
 */
+@import "./components/header";
 @import "./components/footer";
 @import "./components/footer/footer-reviews";
 @import "./components/footer/footer-confirmation";
@@ -111,3 +112,5 @@
 @import "./components/search/search-sorting";
 @import "./components/search/search-cards";
 @import "./components/search/search-map";
+@import "./components/search/search-filter";
+@import "./components/search/search-hero";
