--- a/src/assets/styles/components/search/search.scss
+++ b/src/assets/styles/components/search/search.scss
@@ -1,7 +1,14 @@
 .search {
   background-color: $bg-blue;
-  padding-top: 30px;
-  padding-bottom: 60px;
+  position: relative;
+  @include max-screen(tablet-2x) {
+
+  }
+
+  @include min-screen(laptop) {
+    padding-top: 30px;
+    padding-bottom: 60px;
+  }
 
   &__wrapper {
     @include max-screen(tablet) {
@@ -23,6 +30,13 @@
       display: flex;
       flex-direction: column;
       gap: 24px;
+    }
+    &.active {
+      position: fixed;
+      inset: 0;
+      display: block;
+      z-index: 25;
+      padding-top: 292px;
     }
   }
 }
